--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapa Bruno Perrelli - Juntos por um Condomínio Melhor</title>
+    <title>Eleição Ed. Bruno Perrelli - Chapa Proximidade, economia e transparência</title>
     <style>
         * {
             margin: 0;
@@ -682,3 +682,4 @@
     </div>
 </body>
 </html>
+
