--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         <!-- Para adicionar foto, use: <img src="caminho/para/foto-daniele.jpg" alt="Daniele"> -->
                         D
                     </div>
-                    <h3>Daniele</h3>
+                    <h3>Daniella</h3>
                     <p class="role">Conselheira Fiscal</p>
                     <p class="apartment">Apartamento 608</p>
                 </div>
@@ -682,4 +682,5 @@
     </div>
 </body>
 </html>
+
 
