--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             height: 100%;
             object-fit: cover;
             border-radius: 50%;
+            object-position: center center;
         }
 
         .team-member:hover .photo-placeholder {
@@ -682,5 +683,6 @@
     </div>
 </body>
 </html>
+
 
 
