--- a/index.html
+++ b/index.html
@@ -198,9 +198,12 @@
             height: 100%;
             object-fit: cover;
             border-radius: 50%;
-            object-position: center center;
+           
         }
 
+        .photo-silvio img {
+            object-position: 55% center;
+  }
         .team-member:hover .photo-placeholder {
             transform: rotate(360deg);
         }
@@ -683,6 +686,7 @@
     </div>
 </body>
 </html>
+
 
 
 
