--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
                     <div class="photo-placeholder">
                         <img src=foto-madson.jpg alt="Madson"> -->
                         M
+                        <div class=".photo-silvio img"
                     </div>
                     <h3>Madson</h3>
                     <p class="role">Subsíndico</p>
@@ -686,6 +687,7 @@
     </div>
 </body>
 </html>
+
 
 
 
