--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         <img src=foto-silvio.jpg alt="Silvio"> -->
                         S
                     </div>
-                    <h3>Silvio</h3>
+                    <h3>Sílvio</h3>
                     <p class="role">Síndico</p>
                     <p class="apartment">Apartamento 1005</p>
                 </div>
@@ -687,6 +687,7 @@
     </div>
 </body>
 </html>
+
 
 
 
