--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
                 <div class="team-member">
                     <div class="photo-placeholder">
-                        JC
+                        <img src="foto-jose carlos.jpg" alt="Jose Carlos">
                     </div>
                     <h3>José Carlos</h3>
                     <p class="role">Conselheiro Fiscal</p>
@@ -666,3 +666,4 @@
     </div>
 </body>
 </html>
+
