--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
                 <div class="team-member">
                     <div class="photo-placeholder">
-                        D
+                        <img src="foto-daniella.jpg" alt="Daniella">
                     </div>
                     <h3>Daniella</h3>
                     <p class="role">Conselheira Fiscal</p>
@@ -507,7 +507,7 @@
                     <div class="photo-placeholder">
                         <img src="foto-jose carlos.jpg" alt="Jose Carlos">
                     </div>
-                    <h3>José Carlos</h3>
+                    <h3>José Carlos (Besouro)</h3>
                     <p class="role">Conselheiro Fiscal</p>
                     <p class="apartment">Apartamento 801</p>
                 </div>
@@ -666,4 +666,5 @@
     </div>
 </body>
 </html>
+
 
