--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <div class="hero-content">
             <div class="logo-container">
                 <div class="building-icon">🏢</div>
-                <h1>Eleição Ed. Buno Perrelli, 16 de outubro</h1>
+                <h1>Eleição Ed. Bruno Perrelli</h1>
                 <p class="tagline">Proximidade, economia e transparência</p>
                 <div class="decorative-line"></div>
                 <p class="subtitle">Uma gestão comprometida com transparência, diálogo e eficiência para o bem-estar de todos os moradores</p>
@@ -666,6 +666,7 @@
     </div>
 </body>
 </html>
+
 
 
 
