--- a/index.html
+++ b/index.html
@@ -660,13 +660,14 @@
     </div>
 
     <div class="cta-section">
-          <h2>Em 16 de outubro, próxima quinta-feira:</h2>
+          <p>Em 16 de outubro, próxima quinta-feira:</p>
         <h2>Vote na Nossa Chapa!</h2>
         <p>Juntos faremos do Bruno Perrelli um condomínio ainda melhor.</p>
         <p><strong>Compromisso, Transparência e Dedicação!</strong></p>
     </div>
 </body>
 </html>
+
 
 
 
