--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <div class="logo-container">
                 <div class="building-icon">🏢</div>
                 <h1>Eleição Ed. Bruno Perrelli</h1>
-                <p class="tagline">Transparência, diálogo e eficiência</p>
+                <p class="tagline">Proximidade, economia e transparência</p>
                 <div class="decorative-line"></div>
                 <p class="subtitle">Uma gestão comprometida com transparência, diálogo e eficiência para o bem-estar de todos os moradores</p>
             </div>
@@ -667,6 +667,7 @@
     </div>
 </body>
 </html>
+
 
 
 
