--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eleição Ed. Bruno Perrelli - Chapa Proximidade, economia e transparência</title>
+    <title>Eleição Ed. Bruno Perrelli - Chapa 2</title>
     <style>
         * {
             margin: 0;
@@ -455,7 +455,7 @@
         <div class="hero-content">
             <div class="logo-container">
                 <div class="building-icon">🏢</div>
-                <h1>Eleição Ed. Bruno Perrelli</h1>
+                <h1>Chapa 2 - Ed. Bruno Perrelli</h1>
                 <p class="tagline">Proximidade, economia e transparência</p>
                 <div class="decorative-line"></div>
                 <p class="subtitle">Uma gestão comprometida com transparência, diálogo e eficiência para o bem-estar de todos os moradores</p>
@@ -667,6 +667,7 @@
     </div>
 </body>
 </html>
+
 
 
 
